--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "command line interface to namecheap.com api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/**/*_test.js"
   },
   "bin": {
     "namecheap": "bin/namecheap-cli.js"
