--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "stevenzeiler",
   "license": "ISC",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "superagent": "^2.1.0",
