--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "superagent": "^2.1.0",
+    "validator": "^5.5.0",
     "winston": "^2.2.0",
     "xml2js": "^0.4.17"
   }
