--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "namecheap-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "command line interface to namecheap.com api",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,10 @@
   },
   "author": "stevenzeiler",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stevenzeiler/namecheap-cli.git"
+  },
   "dependencies": {
     "cli-table": "^0.3.1",
     "colors": "^1.1.2",
